# plotter-studio

./: .gitignore  README.md  cleanup.sh  install.sh  package.json  pnpm-lock.yaml  run.sh  update.sh
apps/api/: .gitignore  README.md  cleanup.sh  cli.py  install.sh  main.py  pyproject.toml  rotation.py  run.sh  update.sh  version.py
apps/api/core/: config.py  files.py  nextdraw.py  schemas.py  state.py  utils.py
apps/api/deploy/: plotterstudio@.service
apps/api/plotterstudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/routes/: config.py  plot.py  session.py  settings.py  svg.py
apps/dashboard/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.svelte  app.css  app.d.ts  main.ts
apps/dashboard/src/components/: FileManager.svelte  Sidebar.svelte  ToastHost.svelte
apps/dashboard/src/components/Button/: Button.svelte
apps/dashboard/src/components/Canvas/: Canvas.svelte  CanvasWorkspace.svelte  RulerHorizontal.svelte  RulerVertical.svelte
apps/dashboard/src/components/SvgLoader/: SvgLoader.svelte
apps/dashboard/src/components/actions/: DisableMotors.svelte  EnableMotors.svelte  GetStatus.svelte  MovePen.svelte  PenControls.svelte  PenDown.svelte  PenLower.svelte  PenPosition.svelte  PenRaise.svelte  PenUp.svelte  RefreshStatus.svelte  StartPlot.svelte  Status.svelte  WalkHome.svelte  WalkX.svelte  WalkY.svelte
apps/dashboard/src/components/sidebar/: DevicePresets.svelte  EditImage.svelte  Plot.svelte  PrintSettings.svelte  UploadImage.svelte
apps/dashboard/src/defaults/: devicePresets.ts  printPresets.ts
apps/dashboard/src/lib/: commandExecutor.ts  filesApi.ts  model.ts  nextdrawCommands.ts  rpiApi.ts  toastStore.ts
plotterstudio.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
scripts/: setup.sh  start.sh
settings/: device_presets.json  selected_profiles.json  session_state.json
