[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plotterstudio"
version = "0.1.0"
description = "Plotter Studio API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.118.0",
  "python-multipart==0.0.20",
  "uvicorn==0.37.0",
  "svgpathtools==1.6.1",
]

[project.urls]
Homepage = "https://github.com/patrickhladun/plotter-studio"

[tool.setuptools]
# Install the full apps package structure
packages = ["apps", "apps.api", "apps.api.core", "apps.api.routes"]
package-dir = {"" = "../.."}

# Also install version.py as a top-level module for backward compatibility
py-modules = ["version"]
